manifests/inference/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: video-ai
  labels:
    app: video-ai
  name: video-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-ai
  strategy: {}
  template:
    metadata:
      annotations:
        app: video-ai
      labels:
        app: video-ai
        version: v1
    spec:
      containers:
      - image: ___IMAGE_URL___@___IMAGE_DIGEST___
        imagePullPolicy: IfNotPresent
        name: flask-server
        ports:
        - containerPort: 5000
          protocol: TCP
      restartPolicy: Always
      # serviceAccount: default
      # serviceAccountName: default
