manifests/inference/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: video
  labels:
    app: video-ai
spec:
  to:
    kind: Service
    name: video-ai
    weight: 100
  port:
    targetPort: 5000-tcp
  wildcardPolicy: None
